# flappy-drake

./: .gitignore  LICENSE.md  Makefile  README.md  flake.nix  pyproject.toml
flappy_drake/: __main__.py  constants.py  sprites.py  views.py
