[tool.poetry]
name = "flappy-drake"
version = "0.1.0"
description = "A recreation of the popular Flappy Bird"
authors = ["Jakub Kaczor <jakub@jakubkaczor.com>"]
readme = "README.md"
packages = [{include = "flappy_drake"}]

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"

[tool.poetry.scripts]
flappy-drake = "flappy_drake.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
